# akkor-hotel

./: README.md
akkor-hotel-back/: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  makefile  pyproject.toml
akkor-hotel-back/app/: main.py  security.py
akkor-hotel-back/app/controllers/: bookingController.py  hotelController.py  roomController.py  userController.py  userRoleController.py
akkor-hotel-back/app/managers/: databaseManager.py  s3Manager.py
akkor-hotel-back/app/models/: __init__.py  bookingModel.py  hotelModel.py  roomModel.py  userModel.py  userRoleModel.py
akkor-hotel-back/app/schemas/: bookingSchemas.py  hotelSchemas.py  roomSchemas.py  userRoleSchemas.py  userSchemas.py
akkor-hotel-back/app/services/: bookingService.py  hotelService.py  roomService.py  userRoleService.py  userService.py
akkor-hotel-back/app/tests/: booking_functional_test.py  booking_test.py  conftest.py  hotel_functional_test.py  hotel_test.py  room_functional_test.py  room_test.py  userRole_functional_test.py  user_functional_test.py  user_test.py
akkor-hotel-back/app/utils/: singleton.py
akkor-hotel-back/db-init/: init-db.sql
akkor-hotel-front/: README.md  package-lock.json  package.json
akkor-hotel-front/src/__tests__/: AdminBookings.test.js  AdminHotels.test.js  AdminRooms.test.js  AdminUsers.test.js  Home.test.js  Login.test.js  Profile.test.js  Register.test.js
akkor-hotel-front/src/components/: Admin.js  AdminBookings.js  AdminHotels.js  AdminRooms.js  AdminUsers.js  Footer.js  Header.js  Home.js  HotelCard.js  HotelDetails.js  (+6 more)
(+28 files in other folders)
